# cluFlock

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE_APACHE  README.md
.github/workflows/: CI.yml
examples/: exclusive_file.rs  exclusive_fn_file.rs  exclusive_slice_file.rs  lock_file.rs  lock_file_fn.rs  raw_file.rs  runtime_lock_file.rs  shared_file.rs  struct_lock_file.rs  sync_file.rs  sync_file_fn.rs  test.rs  use.rs  use_fn.rs  use_slice.rs
src/: element.rs  err.rs  err_nostd.rs  error.rs  fn.rs  lib.rs  lock.rs  macro.rs  range.rs  range_lock.rs  rawfile.rs  to.rs  unlock.rs
src/data/: err.rs  fn.rs  lock.rs  unlock.rs
src/lock/: exclusive.rs  exclusive_slice.rs  mod.rs  shared.rs  shared_slice.rs
src/lock/file/: buf.rs  mod.rs  slice.rs
src/lock/file_fn/: mod.rs
src/os_release/: dyn.rs  mod.rs  unix.rs  windows.rs
src/range/: checker.rs  flags.rs  mod.rs  pnum.rs
src/raw/: mod.rs
src/raw/unix/: mod.rs  raw_fd.rs
src/sys/: LockFileEx_windows.rs  flock_unix.rs  mod.rs  unix.rs  windows.rs
src/unix/: mod.rs  raw_fd.rs
tests/: mandrop.rs  unix.rs  windows.rs
