[package]
name = "cluFlock"
version = "1.2.9"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluFlock.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

keywords = ["flock", "unix_flock", "win_flock", "stream_flock", "clucompany"]
categories = ["development-tools::ffi"]

description = "Installation and subsequent safe removal of `flock` locks for data streams."

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["win_fix_woudblock_in_errresult", "std"] 
win_fix_woudblock_in_errresult = [] # !!!Works only in windows platform.
std = []

[dependencies]

[dependencies.SafeManuallyDrop]
version = "1.0.3"
default-features = false
features = [
	"always_check_in_case_debug_assertions", 
	"support_panic_trig", 
	"always_deftrig_panic"
]

[target.'cfg(any(unix))'.dependencies]
libc = "0.2.155"

[target.'cfg(any(windows))'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "minwinbase", "winnt", "ntdef"] }
